Fix black canvas appearing when "Limit animation frame size" is active

The problem happens when "Limit animation frame size" is used in combination
with bilinear or nearest-neighbour filtering. In this case the entire mipmap does not
get fully initialized, hence the textureLod() and glTexSubImage2D() calls become
undefined (the latter actually errors-out).

BUG:486417